--- a/Ayo/Ayo.vcxproj.filters
+++ b/Ayo/Ayo.vcxproj.filters
@@ -1266,6 +1266,8 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
+    <ClInclude Include="src\Ayo\Lighting\LightSource.h" />
+    <ClInclude Include="src\Ayo\Lighting\DirectionalLightSource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ayo\Application.cpp">
@@ -1355,5 +1357,7 @@
     <ClCompile Include="src\ayopch.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Ayo\Lighting\LightSource.cpp" />
+    <ClCompile Include="src\Ayo\Lighting\DirectionalLightSource.cpp" />
   </ItemGroup>
 </Project>
