Add Material, and StandardMaterial for OpenGL

--- a/Ayo/Ayo.vcxproj
+++ b/Ayo/Ayo.vcxproj
@@ -140,6 +140,8 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\Materials\OpenGLStandardMaterial.h" />
+    <ClInclude Include="src\Ayo\Renderer\Material.h" />
     <ClInclude Include="src\Ayo\Lighting\DirectionalLightSource.h" />
     <ClInclude Include="src\Ayo\Lighting\LightSource.h" />
     <ClInclude Include="src\Ayo.h" />
@@ -181,6 +183,7 @@
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\ayopch.h" />
+    <ClInclude Include="src\Ayo\Renderer\Materials\StandardMaterial.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_fixes.hpp" />
@@ -547,6 +550,8 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\Materials\OpenGLStandardMaterial.cpp" />
+    <ClCompile Include="src\Ayo\Renderer\Material.cpp" />
     <ClCompile Include="src\Ayo\Lighting\DirectionalLightSource.cpp" />
     <ClCompile Include="src\Ayo\Lighting\LightSource.cpp" />
     <ClCompile Include="src\Ayo\Application.cpp" />
@@ -580,6 +585,7 @@
     <ClCompile Include="src\ayopch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\Ayo\Renderer\Materials\StandardMaterial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\glfw\GLFW.vcxproj">
