--- a/Ayo/Ayo.vcxproj
+++ b/Ayo/Ayo.vcxproj
@@ -140,6 +140,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Ayo\Lighting\PointLightSource.h" />
     <ClInclude Include="src\Platform\OpenGL\Materials\OpenGLStandardMaterial.h" />
     <ClInclude Include="src\Ayo\Renderer\Material.h" />
     <ClInclude Include="src\Ayo\Lighting\DirectionalLightSource.h" />
@@ -550,6 +551,7 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Ayo\Lighting\PointLightSource.cpp" />
     <ClCompile Include="src\Platform\OpenGL\Materials\OpenGLStandardMaterial.cpp" />
     <ClCompile Include="src\Ayo\Renderer\Material.cpp" />
     <ClCompile Include="src\Ayo\Lighting\DirectionalLightSource.cpp" />
