Finish up assimp model loading

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1170,320
-ViewportId=0xE927CF2F
+Pos=1245,322
 Size=662,423
 Collapsed=0
 
